# infra-batch-upgrade

./: README.md  requirements.txt  setup.cfg
docs/: how_to_use.md
infra_upgrade/: cli.py  config.py
infra_upgrade/commands/: cmd_check.py  cmd_config.py  cmd_finish_upgrade.py  cmd_upgrade.py
package/: Dockerfile
scripts/: package
