[metadata]
name = infra-upgrade
summary = Infrastructure service upgrade for Rancher
description-file =
    README.md
author = niusmallnan
author-email = niusmallnan@gmail.com
classifier =
    Environment :: RancherLabs
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[pbr]
warnerrors = True
autodoc_tree_index_modules = True

[files]
packages =
   infra_upgrade

[entry_points]
console_scripts =
    infra-upgrade = infra_upgrade.cli:cli
